src/objects/Translate__c.object
<CustomObject>
    <fields>
        <fullName>Birthdate_Label__c</fullName>
        <label>Birthdate_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Form_Registration_Label__c</fullName>
        <label>Button Form Registration Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Signature_Clear_Label__c</fullName>
        <label>Button Signature Clear Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Signature_Save_Label__c</fullName>
        <label>Button Signature Save Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Label__c</fullName>
        <label>CAP_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Placeholder__c</fullName>
        <label>CAP_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Email_Label__c</fullName>
        <label>Checkbox_Email_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Mail_Label__c</fullName>
        <label>Checkbox_Mail_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Other_Label__c</fullName>
        <label>Checkbox_Other_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Other_Placeholder__c</fullName>
        <label>Checkbox_Other_Placeholder</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Phone_Label__c</fullName>
        <label>Checkbox_Phone_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_WeChat_Label__c</fullName>
        <label>Checkbox_WeChat_Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Label__c</fullName>
        <label>City_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Placeholder__c</fullName>
        <label>City_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preferences_Label__c</fullName>
        <label>Contact_Preferences_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Label__c</fullName>
        <label>Country_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Placeholder__c</fullName>
        <label>Country_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Label__c</fullName>
        <label>Date_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Label__c</fullName>
        <label>Email_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Placeholder__c</fullName>
        <label>Email_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Label__c</fullName>
        <label>First_Name_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Placeholder__c</fullName>
        <label>First_Name_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Label__c</fullName>
        <label>Gender_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informativa_Body_Label__c</fullName>
        <label>Informativa_Body_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informativa_Body_Rich_Label_Department__c</fullName>
        <label>Informativa_Body_Rich_Label_Department</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Informativa_Body_Rich_Label__c</fullName>
        <label>Informativa_Body_Rich_Label</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Informativa_Header_Label__c</fullName>
        <label>Informativa_Header_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Label__c</fullName>
        <label>Language_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Label__c</fullName>
        <label>Last_Name_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Placeholder__c</fullName>
        <label>Last_Name_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Label__c</fullName>
        <label>Mobile_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Placeholder__c</fullName>
        <label>Mobile_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_Label__c</fullName>
        <label>Nationality_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Label__c</fullName>
        <label>Phone_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Placeholder__c</fullName>
        <label>Phone_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language_Label__c</fullName>
        <label>Preferred_Language_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_1_Label__c</fullName>
        <label>Privacy_1_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_2_Label_Department__c</fullName>
        <label>Privacy_2_Label_Department</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_2_Label__c</fullName>
        <label>Privacy_2_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_3_Label__c</fullName>
        <label>Privacy_3_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Footer_Label__c</fullName>
        <label>Privacy_Footer_Label</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Header_After_Link_Label__c</fullName>
        <label>Privacy_Header_After_Link_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Header_Before_Link_Label__c</fullName>
        <label>Privacy_Header_Before_Link_Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Header_Label__c</fullName>
        <label>Privacy_Header_Label</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Header_Link_Label__c</fullName>
        <label>Privacy_Header_Link_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_No_Label__c</fullName>
        <label>Privacy_No_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Yes_Label__c</fullName>
        <label>Privacy_Yes_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Key__c</fullName>
        <label>Salutation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Label__c</fullName>
        <label>Salutation_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Value__c</fullName>
        <label>Salutation_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Asterisco_Label__c</fullName>
        <label>Signature_Asterisco_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Label__c</fullName>
        <label>Signature_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Label__c</fullName>
        <label>State_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Placeholder__c</fullName>
        <label>State_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Label__c</fullName>
        <label>Street_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Placeholder__c</fullName>
        <label>Street_Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subheader_Label__c</fullName>
        <label>Subheader_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>We_Chat_ID_Label__c</fullName>
        <label>We_Chat_ID_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>We_Chat_ID_Placeholder__c</fullName>
        <label>We_Chat_ID_Placeholder</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Translate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Signature_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ISO Language</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>